--- a/src/app/components/feed/new-post/new-post.component.html
+++ b/src/app/components/feed/new-post/new-post.component.html
@@ -3,21 +3,21 @@
   <div class="flex flex-column pa3">
     <div class="flex pv1">
       <div class="w-40">What happened?</div>
-      <input class="flex-auto" [(ngModel)]="whatHappened" type="text">
+      <textarea [(ngModel)]="whatHappened" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="What Happened?"></textarea>
     </div>
-    <div class="flex pv1">
+    <div class="flex pv1 items-center">
       <div class="w-40">How it went?</div>
-      <select [(ngModel)]="howItWent">
+      <select class="input-reset ba b--black-20 pa2 db w-100 bg-white" [(ngModel)]="howItWent">
         <option *ngFor="let howItWent of howItWentOptions" [value]="howItWent">{{howItWent.label}}</option>
       </select>
     </div>
-    <div class="flex pv1">
+    <div class="flex pv1 items-center">
       <div class="w-40">Problem Type</div>
-      <select [(ngModel)]="whatWasTheProblem">
+      <select class="input-reset ba b--black-20 pa2 db w-100 bg-white" [(ngModel)]="whatWasTheProblem">
         <option *ngFor="let problem of problemOptions" [value]="problem">{{problem}}</option>
       </select>
     </div>
     <div class="flex pt2">
-      <button class="w-100 bn f6 link dim br1 ph3 pv2 dib white outline-0 bg-blue hover-bg-light-blue hover-blue" (click)="onAddPostClick()">Submit</button>
+      <button class="w-100 bn f5 b link dim br1 pv3 dib white outline-0 bg-blue hover-bg-light-blue hover-blue" (click)="onAddPostClick()">SUBMIT</button>
     </div>
   </div>
