--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,6 +1,6 @@
 <div class="pa2 flex flex-column">
-  <div class="flex justify-between items-end pv3">
-    <div class="f2">Daily Insights</div>
+  <div style="" class="flex justify-between items-end pv3">
+    <div class="tc f2-l fw9 black-90">Daily Insights</div>
     <div class="flex items-center pointer bg-green hover-bg-light-green white pv1 ph3 br-pill f6" (click)="showNewPost()">
       <i class="material-icons pr1">add</i>
       ADD POST
