--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,10 @@
       <gtc-feed></gtc-feed>
     </div>
     <div class="w-60 pa2">
+      <header class="tc ph4" class="pa1">
+        <h1 styles="height: 110px" class="tc f2-l fw9 black-90 mv3">Lives you've changed</h1>
+        <!-- <h2 class="f5 f4-m f3-l fw2 black-50 mt0 lh-copy"> subtitle stuff</h2> -->
+      </header>
       <div class="bg-white shadow-2 br2">
         <gtc-graph></gtc-graph>
         <gtc-personal-stats></gtc-personal-stats>
