--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
       <!-- <i class="material-icons pa2 pointer">menu</i> -->
       <div class="pl2 title flex items-center">
-        <div class="pb1">Kid Help Phone: Counsellor Analytics</div>
+        <div class="pb1">Kids Help Phone: Counsellor Analytics</div>
         <img class="icon pl2" src="../assets/icons/kidsHelpPhone.png" alt="icon">
       </div>
     </div>
