Fix typo; Remove console.log call

--- a/src/app/components/feed/feed-item/feed-item.component.html
+++ b/src/app/components/feed/feed-item/feed-item.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-column bg-white shadow-3 br2 mv2 customFont">
-  <div class="flex items-center justify-between pv1 bb b--light-gray" *ngIf="data.user.username !== null">
+  <div class="flex items-center justify-between pv1 bb b--light-gray" *ngIf="data.user.userName !== null">
     <div class="flex items-center">
       <div class="user-icon br-pill mh2 ba b--white" [ngStyle]="{'background-image': 'url(' + data.user.thumbnail + ')'}"></div>
       <div class="flex flex-column">
