--- a/src/app/components/personal-stats/personal-stats.component.html
+++ b/src/app/components/personal-stats/personal-stats.component.html
@@ -1,6 +1,6 @@
-<div class="flex pl2">
-<header class="tc ph4" class="pa1">
-    <h2 class="black-90 mv3">Your Recent Quality Review Scores</h2>
+<div class="sidebar flex pl2 w-100 tc ">
+<header class="tc ph4 w-100 pa1">
+    <h2 class="black-90 w-100 mv3">Your Recent Quality Review Scores</h2>
     <!-- <h2 class="f5 f4-m f3-l fw2 black-50 mt0 lh-copy"> subtitle stuff</h2> -->
 </header>
 </div>
