more css changes

--- a/src/app/components/feed/feed-item/feed-item.component.html
+++ b/src/app/components/feed/feed-item/feed-item.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="topic">{{data.whatWasTheProblem}}
-    <i class="material-icons f6 icon">mood</i>
+    <i class="material-icons f6 icon">{{data.howItWent.icon}}</i>
     </div>
   </div>
   <div class="flex flex-column pa2">
