--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-column outer pb4 bb">
+<div class="flex flex-column outer pb4">
   <div>
     <nav class="flex bb tc mw7 center">
       <a class="flex-auto flex items-center pointer justify-center f6 f5-l link bg-animate black-80 dib pa3 ph4-l hover-bg-lightest-blue"
@@ -50,4 +50,6 @@
         (chartClick)="chartClicked($event)"></canvas>
     </div>
   </div>
+
+  <div class="border-div graph-div"></div>
 </div>
