--- a/src/app/components/graph/graph.component.scss
+++ b/src/app/components/graph/graph.component.scss
@@ -15,4 +15,6 @@
 .border-div{
   border-bottom: 1px solid rgb(202, 202, 202);
   padding-left:100px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
