--- a/src/app/components/feed/feed-item/feed-item.component.html
+++ b/src/app/components/feed/feed-item/feed-item.component.html
@@ -19,7 +19,7 @@
   <div class="flex justify-between bt b--light-gray">
     <div class="flex f6 pa2 gray date">{{data.date}}</div>
     <div class="flex">
-      <div class="flex items-center ph2 gray f6 bl br b--light-gray pointer">
+      <div (click)="data.likes.push(null)" class="flex items-center ph2 gray f6 bl br b--light-gray pointer">
         <i class="material-icons f6">thumb_up</i>
         <div class="pl2">{{data.likes.length}}</div>
       </div>
