fixed new post textbox Sizee

--- a/src/app/components/feed/new-post/new-post.component.html
+++ b/src/app/components/feed/new-post/new-post.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-column pa3">
     <div class="flex pv1">
       <div class="w-40">What happened?</div>
-      <textarea [(ngModel)]="whatHappened" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="What Happened?"></textarea>
+      <textarea [(ngModel)]="whatHappened" class="mySize db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="What Happened?"></textarea>
     </div>
     <div class="flex pv1 items-center">
       <div class="w-40">How it went?</div>
