--- a/client/src/app/components/feed/post-item/post-item.component.html
+++ b/client/src/app/components/feed/post-item/post-item.component.html
@@ -19,11 +19,11 @@
   <div class="flex justify-between bt b--light-gray">
     <div class="flex f6 pa2 gray date">{{post.date}}</div>
     <div class="flex">
-      <div (click)="post.likes = post.likes+1" class="flex items-center ph2 gray f6 bl br b--light-gray pointer">
+      <div (click)="post.likes.push(null)" class="flex items-center ph2 gray f6 bl br b--light-gray pointer">
         <i class="material-icons f6">thumb_up</i>
         <div class="pl2">{{post.likes.length}}</div>
       </div>
-      <div class="flex items-center ph2 gray f6 pointer">
+      <div class="flex items-center ph2 gray f6 pointer" (click)="comment()">
         <i class="material-icons f6">chat_bubble</i>
         <div class="pl2">{{post.children.length}}</div>
       </div>
