--- a/client/src/app/components/feed/feed.component.html
+++ b/client/src/app/components/feed/feed.component.html
@@ -12,7 +12,7 @@
   <gtc-modal [visible]="isThreadVisible" (onHide)="hideThread()">
     <gtc-thread [parent]="selectedPost" (onClose)="hideThread()"></gtc-thread>
   </gtc-modal>
-  <div *ngFor="let post of posts">
+  <div *ngFor="let post of displayPosts">
     <gtc-post-item [post]="post" (onCommentClick)="openThread(post)"></gtc-post-item>
   </div>
 </div>
