--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -11,6 +11,7 @@
       <div class="bg-white shadow-2 br2 sticky">
         <gtc-graph></gtc-graph>
         <gtc-personal-stats></gtc-personal-stats>
+        <gtc-badges></gtc-badges>
       </div>
     </div>
   </div>
