--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,13 +7,17 @@
         <img class="icon pl2" src="../dist/assets/icons/kidsHelpPhone.png" alt="icon">
       </div>
     </div>
-    <div class="flex items-center ttc ph4" *ngIf="user !== null">
+    <div (click)='showProfile()' class="flex items-center ttc ph4" *ngIf="user !== null">
       <div class="user-icon br-pill mr3 ba b--white" [ngStyle]="{'background-image': 'url(' + user.thumbnail + ')'}"></div>
       <div *ngIf="theUser != null">{{theUser.firstName}} {{theUser.lastName}}</div>
     </div>
   </div>
   <div class="body-container pa2 bg-near-white h-100">
-    <router-outlet></router-outlet>
+    <gtc-modal [visible]="profileVisible" (onHide)="hideProfile()">
+      <gtc-profile [user]="theUser"></gtc-profile>
+    </gtc-modal>
+    <router-outlet>
+    </router-outlet>
   </div>
   <div class="flex bottom tc footer">
     <div class="w-100">
