--- a/client/src/app/components/feed/post-item/post-item.component.html
+++ b/client/src/app/components/feed/post-item/post-item.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-column bg-white shadow-3 br2 mv2 customFont">
   <div class="flex items-center justify-between pv1 bb b--light-gray" *ngIf="post.user.username !== null">
-    <div class="flex items-center">
+    <div class="flex items-center" (click)="showProfile()">
       <div class="user-icon br-pill mh2 ba b--white" [ngStyle]="{'background-image': 'url(https://randomuser.me/api/portraits/thumb/men/51.jpg)'}"></div>
       <div class="flex flex-column">
         <div class="ttc">{{post.user.firstName}} {{post.user.lastName}}</div>
@@ -30,3 +30,6 @@
     </div>
   </div>
 </div>
+<gtc-modal [visible]='profileVisible' (onHide)="hideProfile()">
+  <gtc-profile [user]="post.user"></gtc-profile>
+</gtc-modal>
